--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yuan Yuan's Homepage</title>
+  <title>He Xingwei's Homepage</title>
   <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
   <!--<link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -71,15 +71,15 @@
               <img class="is-rounded" src="images/psb4.jpg">
             </figure>
             <div class="content">
-              <h3 style="margin-top: 1em">Yuan Yuan 袁园</h3>
-              <h6>MIT CSAIL</h6>
-              <h6>32-G916, 32 Vassar St.</h6>
-              <h6>Cambridge, MA 02139</h6>
+              <h3 style="margin-top: 1em">He Xingwei 贺星伟</h3>
+              <h6>The University of Hong Kong (HKU)</h6>
+              <h6>Pokfulam Road</h6>
+              <h6>Hong Kong</h6>
             </div>
             <!-- details -->
             <div class="details">
               <h3>Email:</h3>
-              <p><a href="mailto:miayuan@mit.edu">miayuan[at]mit[dot]edu</a></p>
+              <p><a href="mailto:hexingwei15@gmail.com">hexingwei15[at]gmail[dot]com</a></p>
             </div>
             <!-- social network icons -->
             <div class="social">
