--- a/index.html
+++ b/index.html
@@ -83,18 +83,18 @@
             </div>
             <!-- social network icons -->
             <div class="social">
-              <a href="https://github.com/yyuanad" target="_blank">
+              <a href="https://github.com/NLPCode" target="_blank">
                 <span class="fab fa-github fa-2x" style="display:inline; text-decoration: none"></span>
               </a>
-              <a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ" target="_blank">
+              <a href="https://scholar.google.com/citations?user=p1a5WXIAAAAJ&hl=zh-TW" target="_blank">
                 <span class="fab fa-google fa-2x" style="display:inline; text-decoration: none"></span>
               </a>
-              <a href="https://www.linkedin.com/in/yuan-yuan-96451747/" target="_blank">
+<!--               <a href="https://www.linkedin.com/in/yuan-yuan-96451747/" target="_blank">
                 <span class="fab fa-linkedin fa-2x" style="display:inline; text-decoration: none"></span>
               </a>
               <a href="https://twitter.com/miayuany" target="_blank">
                 <span class="fab fa-twitter fa-2x" style="display:inline; text-decoration: none"></span>
-              </a>
+              </a> -->
             </div>
 
 
