--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 
             <!--About Me-->
             <h3 id="intro">About Me</h3>
-            <p>I am a Postdoctoral Research Associate at <a href="https://www.csail.mit.edu/" target="_blank">Computer Science & Artificial Intelligence Lab</a>
-              of <a href="http://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a>, working with Prof. <a href="http://people.csail.mit.edu/dina/" target="_blank">Dina Katabi</a>.
-              Before MIT, I obtained my Ph.D. degree in <a href="https://ece.hkust.edu.hk/" target="_blank">ECE department</a> from <a href="http://www.ust.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by Prof. <a href="https://sites.google.com/view/dyyeung" target="_blank">Dit-Yan Yeung</a>.
+            <p>I am a Ph.D. student at <a href="https://www.cs.hku.hk/" target="_blank">Computer Science</a>
+              of <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong</a>, working with Prof. Yiu, Siu Ming<a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Dina Katabi</a>.
+<!--               Before HKU, I obtained my Ph.D. degree in <a href="https://ece.hkust.edu.hk/" target="_blank">ECE department</a> from <a href="http://www.ust.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by Prof. <a href="https://sites.google.com/view/dyyeung" target="_blank">Dit-Yan Yeung</a>.
               I was a visiting research scholar in <a href="https://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a> of <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>, working with Prof. <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
-
+ -->
             </p>
 
             <p>
