--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <!--About Me-->
             <h3 id="intro">About Me</h3>
             <p>I am a Ph.D. student at <a href="https://www.cs.hku.hk/" target="_blank">Computer Science</a>
-              of <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong</a>, working with Prof. Yiu, Siu Ming<a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Dina Katabi</a>.
+              of <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong</a>, working with <a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Prof. Yiu, Siu Ming</a>.
 <!--               Before HKU, I obtained my Ph.D. degree in <a href="https://ece.hkust.edu.hk/" target="_blank">ECE department</a> from <a href="http://www.ust.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by Prof. <a href="https://sites.google.com/view/dyyeung" target="_blank">Dit-Yan Yeung</a>.
               I was a visiting research scholar in <a href="https://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a> of <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>, working with Prof. <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
  -->
@@ -575,8 +575,11 @@
             </h3>
             Duties at various times have included: weekly tutorial classes, weekly computer lab exercises, office hours, mark homework and exam papers.
             <ul>
-              <li>TA of ELEC1200 (HKUST) -- A System View of Communications: from Signals to Packets, <i>Spring 2012</i>, <i>Fall 2013</i></li>
-              <li>TA of EESM5547 (HKUST) -- Multimedia Signal Processing, <i>Fall 2014</i></li>
+              <li>Teaching Assistant (Tutor and Grader) at the University of Hong Kong -- Electronic Commerce Technology (COMP3320), <i>Spring 2022</i> </li>
+              <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2021</i> </li>
+	      <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2020</i> </li>
+	      <li>Teaching Assistant (Demonstrator) at the University of Hong Kong -- MIC Training, <i>Summer 2019</i> </li>
+		    
             </ul>
 
             
