--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="column is-2_5">
           <div class="sticky">
             <figure class="image" style="width: 10rem;">
-              <img class="is-rounded" src="images/psb4.jpg">
+              <img class="is-rounded" src="images/hxw.jpg">
             </figure>
             <div class="content">
               <h3 style="margin-top: 1em">He Xingwei 贺星伟</h3>
@@ -386,116 +386,7 @@
               </div>
             </article>
 
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2015_icassp_yuan.jpeg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Image Compression Via Dense Descriptors Assisted Synthesis</b><br>
-                    <b>Yuan Yuan</b>, Amin Zheng, Haitao Yang and Oscar C. Au<br>
-                    <i>International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP</b>), 2015</i><br>
-                    <a href="papers/paper_2015_icassp_yuan.pdf" target="_blank">[PDF]</a><br>
-                    <em class="red"><b>Oral Presentation</b></em><br>
-                  </p>
-                </div>
-              </div>
-            </article>
 
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2015_icip_amin_mvf.jpg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Motion Vector Fields Based Video Coding</b><br>
-                    Amin Zheng, <b>Yuan Yuan</b>, Hong Zhang, Haitao Yang, Pengfei Wan and Oscar C. Au<br>
-                    <i>International Conference on Image Processing (<b>ICIP</b>), 2015</i><br>
-                    <a href="papers/paper_2015_icip_amin_mvf.pdf" target="_blank">[PDF]</a><br>
-                  </p>
-                </div>
-              </div>
-            </article>
-
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2015_icip_amin_of.jpg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Motion Estimation Via Hierarchical Block Matching and Graph Cut</b><br>
-                    Amin Zheng, <b>Yuan Yuan</b>, Sunil Prasad Jaiswal and Oscar C. Au<br>
-                    <i>International Conference on Image Processing (<b>ICIP</b>), 2015</i><br>
-                    <a href="papers/paper_2015_icip_amin_of.pdf" target="_blank">[PDF]</a><br>
-                  </p>
-                </div>
-              </div>
-            </article>
-
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2015_icip_yonggen.jpg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Image Colorization Via Color Propagation and Rank Minimization</b><br>
-                    Yonggen Ling, Oscar C. Au, Jiahao Pang, Jin Zeng, <b>Yuan Yuan</b> and Amin Zheng<br>
-                    <i>International Conference on Image Processing (<b>ICIP</b>), 2015</i><br>
-                    <a href="papers/paper_2015_icip_yonggen_colorization.pdf" target="_blank">[PDF]</a><br>
-                  </p>
-                </div>
-              </div>
-            </article>
-
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2014_icassp_yuan.jpg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Image Compression Via Sparse Reconstruction</b><br>
-                    <b>Yuan Yuan</b>, Oscar C. Au, Amin Zheng and Haitao Yang<br>
-                    <i>International Conference on Acoustics, Speech and Signal Processing (<b>ICASSP</b>), 2014</i><br>
-                    <a href="papers/paper_2014_icassp_yuan.pdf" target="_blank">[PDF]</a>
-                    <a href="papers/poster_2014_icassp_yuan.pdf" target="_blank">[Poster]</a>
-                  </p>
-                </div>
-              </div>
-            </article>
-
-            <article class="columns">
-              <div class="column is-3">
-                <figure class="image">
-                  <img src="images/publications/2014_icip_haiyan.jpg">
-                </figure>
-              </div>
-              <div class="column">
-                <div class="content">
-                  <p>
-                    <b>Natural Image Matting via Adaptive Local and Nonlocal Sample Clustering</b><br>
-                    Haiyan Yang, Oscar C. Au, <b>Yuan Yuan</b> and Wenxiu Sun<br>
-                    <i>International Conference on Image Processing (<b>ICIP</b>), 2014</i><br>
-                    <a href="papers/paper_2014_icip_haiyan_matting.pdf" target="_blank">[PDF]</a><br>
-                    <em class="red"><b>Top 10% Paper Award</b></em><br>
-                  </p>
-                </div>
-              </div>
-            </article>
 
 
             <h3 >
