--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </ul>
 
 
-            <!--Selected Publications-->
+<!--             <!--Selected Publications-->
             <h3 id="publications">Selected Publications <span style="font-size: 1rem;margin-left: 1rem;position: relative;bottom: .1rem;"><a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ" target="_blank">[Full List]</a></span></h3>
             
             <article class="columns">
@@ -384,7 +384,7 @@
                   </p>
                 </div>
               </div>
-            </article>
+            </article> -->
 
 
 
@@ -415,12 +415,11 @@
               Selected Honors and Awards
             </h3>
             <ul>
-              <li>Ali Star, Alibaba Group, 2019.</li>
-              <li>Overseas Research Award for conducting research at Carnegie Mellon University, HKUST, 2016.</li>
-              <li>Research Travel Grant, HKUST, 2014, 2015, 2017.</li>
-              <li>Meritorious Winner, Mathematical Contest in Modeling of America (MCM), 2011.</li>
-              <li>National Scholarship, Ministry of Education of P.R.China, 2009, 2010, 2011.</li>
-              <li>Microsoft Young Fellowship, Microsoft Research Asia, 2011.</li>
+              <li>Postgraduate Scholarship at the University of Hong Kong, 2018, 2019, 2021, 2022.</li>
+              <li>First Prize of ACM/ICPC Program Contest at Xidian University, 2014.</li>
+              <li>First Prize of Higher Mathematics Competition in Shanxi Province, 2012.</li>
+              <li>National Scholarship, Ministry of Education of P.R.China, 2011, 2012, 2013.</li>
+              <li>Excellent Student at Xidian University, 2011, 2012, 2013.</li>
             </ul>
 
 
