--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                 <li><a href="#miscellaneous">Miscellaneous</a></li>
               </ul>
               <div class="column" style="width: 40%">
-                <script type='text/javascript' id='clstr_globe' src='//cdn.clustrmaps.com/globe.js?d=VjnfOejvIIrpggl9NSOiRcw0OJHJ0QGzEhq2kCXwP94' async></script>
+		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=6v6vvEAKRqz8Jrlvk90FIvLa7XS1oXlcqWmZP2aKx9Y&cl=ffffff&w=a"></script>
+		      
               </div>
             </div>
           </div>
