--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <li><a href="#miscellaneous">Miscellaneous</a></li>
               </ul>
               <div class="column" style="width: 40%">
-		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=6v6vvEAKRqz8Jrlvk90FIvLa7XS1oXlcqWmZP2aKx9Y&cl=ffffff&w=a"></script>
-		      
+<!-- 		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=6v6vvEAKRqz8Jrlvk90FIvLa7XS1oXlcqWmZP2aKx9Y&cl=ffffff&w=a"></script> -->
+		<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=6v6vvEAKRqz8Jrlvk90FIvLa7XS1oXlcqWmZP2aKx9Y"></script>
               </div>
             </div>
           </div>
