--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             </ul>
 
 
-<!--             <!--Selected Publications-->
-            <h3 id="publications">Selected Publications <span style="font-size: 1rem;margin-left: 1rem;position: relative;bottom: .1rem;"><a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ" target="_blank">[Full List]</a></span></h3>
+            <!--Selected Publications-->
+<!--             <h3 id="publications">Selected Publications <span style="font-size: 1rem;margin-left: 1rem;position: relative;bottom: .1rem;"><a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ" target="_blank">[Full List]</a></span></h3>
             
             <article class="columns">
               <div class="column is-3">
@@ -385,8 +385,8 @@
                   </p>
                 </div>
               </div>
-            </article> -->
-
+	</article>
+ -->
 
 
 
