--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <h3 >
               Teaching
             </h3>
-            Duties at various times have included: weekly tutorial classes, weekly computer lab exercises, office hours, mark homework and exam papers.
+<!--             Duties at various times have included: weekly tutorial classes, weekly computer lab exercises, office hours, mark homework and exam papers. -->
             <ul>
               <li>Teaching Assistant (Tutor and Grader) at the University of Hong Kong -- Electronic Commerce Technology (COMP3320), <i>Spring 2022</i> </li>
               <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2021</i> </li>
