--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <footer class="container">
       <br><hr>
       <div class="row" style="text-align: center">
-        © 2020-2021 Yuan Yuan. Last updated: Apr 18, 2022.
+        © He Xingwei. Last updated: Oct 26, 2022.
       </div>
     </footer>
   </section>
