--- a/index.html
+++ b/index.html
@@ -433,15 +433,15 @@
 
               <li><b>Conference Reviewer:</b></li>
 
-              AAAI Conference on Artificial Intelligence (AAAI), 2021 <br>
-	      North American Chapter of the Association for Computational Linguistics (NAACL), 2022 <br>
-	      Empirical Methods in Natural Language Processing  (EMNLP), 2022 <br>
+              AAAI Conference on Artificial Intelligence (AAAI), 2021. <br>
+	      North American Chapter of the Association for Computational Linguistics (NAACL), 2022. <br>
+	      Empirical Methods in Natural Language Processing  (EMNLP), 2022. <br>
 		    
 
 
               <li><b>Journal Reviewer</b></li>
-              IEEE Transactions on Emerging Topics in Computational Intelligence <br>
-              Applied Intelligence <br>
+              IEEE Transactions on Emerging Topics in Computational Intelligence, 2022. <br>
+              Applied Intelligence, 2021. <br>
 
             </ul>
 
@@ -451,10 +451,10 @@
             </h3>
 <!--             Duties at various times have included: weekly tutorial classes, weekly computer lab exercises, office hours, mark homework and exam papers. -->
             <ul>
-              <li>Teaching Assistant (Tutor and Grader) at the University of Hong Kong -- Electronic Commerce Technology (COMP3320), <i>Spring 2022</i> </li>
-              <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2021</i> </li>
-	      <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2020</i> </li>
-	      <li>Teaching Assistant (Demonstrator) at the University of Hong Kong -- MIC Training, <i>Summer 2019</i> </li>
+              <li>Teaching Assistant (Tutor and Grader) at the University of Hong Kong -- Electronic Commerce Technology (COMP3320), <i>Spring 2022</i>. </li>
+              <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2021</i>. </li>
+	      <li>Teaching Assistant (Tutor) at the University of Hong Kong -- Computer Programming I (ENGG1330), <i>Spring 2020</i>. </li>
+	      <li>Teaching Assistant (Demonstrator) at the University of Hong Kong -- MIC Training, <i>Summer 2019</i>. </li>
 		    
             </ul>
 
