--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
               <img class="is-rounded" src="images/hxw.jpg">
             </figure>
             <div class="content">
-              <h3 style="margin-top: 1em">He Xingwei 贺星伟</h3>
-              <h8>The University of Hong Kong (HKU)</h8>
-              <h8>Chow Yei Ching Building, Pokfulam Road, Hong Kong</h8>
+              <h3 style="margin-top: 1em">He Xingwei (贺星伟)</h3>
+              <h10>The University of Hong Kong (HKU), </h10>
+              <h10>Chow Yei Ching Building, Pokfulam Road, Hong Kong</h10>
 
             </div>
             <!-- details -->
