--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </figure>
             <div class="content">
               <h3 style="margin-top: 1em">He Xingwei (贺星伟)</h3>
-              <h10>The University of Hong Kong (HKU), </h10>
+              <h10>The University of Hong Kong</h10>
               <h10>Chow Yei Ching Building, Pokfulam Road, Hong Kong</h10>
 
             </div>
@@ -123,7 +123,7 @@
             <!--About Me-->
             <h3 id="intro">About Me</h3>
             <p>I am a Ph.D. student at <a href="https://www.cs.hku.hk/" target="_blank">Computer Science</a>
-              of <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong</a>, working with <a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Prof. Yiu, Siu Ming</a>.
+              of <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong (HKU)</a>, working with <a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Prof. Yiu, Siu Ming</a>.
 <!--               Before HKU, I obtained my Ph.D. degree in <a href="https://ece.hkust.edu.hk/" target="_blank">ECE department</a> from <a href="http://www.ust.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by Prof. <a href="https://sites.google.com/view/dyyeung" target="_blank">Dit-Yan Yeung</a>.
               I was a visiting research scholar in <a href="https://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a> of <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>, working with Prof. <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
  -->
