--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
             </figure>
             <div class="content">
               <h3 style="margin-top: 1em">He Xingwei (贺星伟)</h3>
-              <h10>The University of Hong Kong</h10>
-              <h10>Chow Yei Ching Building, Pokfulam Road, Hong Kong</h10>
+	      <h10>Chow Yei Ching Building,</h10>
+              <h10>The University of Hong Kong,</h10>
+              <h10>Pokfulam Road, Hong Kong</h10>
 
             </div>
             <!-- details -->
