--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </h3>
             <ul>
 	     <li><span>[10/2022] Our paper <a href="https://arxiv.org/abs/2210.11708" target="_blank">"Metric-guided Distillation: Distilling Knowledge from the Metric to Ranker and Retriever for Generative Commonsense Reasoning"</a> has been accepted to EMNLP 2022 (<b>main conference, long paper</b>).</span></li>
-	     <em class="red"><b>Oral Presentation (2%)</b></em><br>
+	     <em class="red"><b>Oral Presentation </b></em><br>
 	     <li><span>[06/2022] Our model <a href="https://arxiv.org/abs/2210.11708" target="_blank"> DKMR^2</a> achieves the SOTA on the <a href="https://inklab.usc.edu/CommonGen/leaderboard.html" target="_blank"> CommonGen leaderboard</a>. </span></li>
 		    
               <li><span>[02/2022] Our paper <a href="https://aclanthology.org/2022.acl-long.46/" target="_blank">"Controllable Dictionary Example Generation: Generating Example Sentences for Specific Targeted Audiences"</a> has been accepted to ACL 2022 (<b>main conference, long paper</b>).</span></li>
