--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
               News
             </h3>
             <ul>
-	     <li><span>[10/2022] Our paper <a href="https://arxiv.org/abs/2210.11708" target="_blank">"Metric-guided Distillation: Distilling Knowledge from the Metric to Ranker and Retriever for Generative Commonsense Reasoning"</a> has been accepted to EMNLP 2022 (<b>main conference, long paper</b>).</span></li>
+	     <li><span>[10/2022] Our paper <a href="https://arxiv.org/abs/2210.11708" target="_blank">"Metric-guided Distillation: Distilling Knowledge from the Metric to Ranker and Retriever for Generative Commonsense Reasoning"</a> has been accepted to EMNLP 2022 (<b>Main Conference, Long Paper</b>).</span></li>
 	     <em class="red"><b>Oral Presentation </b></em><br>
 	     <li><span>[06/2022] Our model <a href="https://arxiv.org/abs/2210.11708" target="_blank"> DKMR^2</a> achieves the SOTA on the <a href="https://inklab.usc.edu/CommonGen/leaderboard.html" target="_blank"> CommonGen leaderboard</a>. </span></li>
 		    
-              <li><span>[02/2022] Our paper <a href="https://aclanthology.org/2022.acl-long.46/" target="_blank">"Controllable Dictionary Example Generation: Generating Example Sentences for Specific Targeted Audiences"</a> has been accepted to ACL 2022 (<b>main conference, long paper</b>).</span></li>
-	     <li><span>[08/2021] Our paper <a href="https://aclanthology.org/2021.emnlp-main.681/" target="_blank">"Parallel Refinements for Lexically Constrained Text Generation with BART"</a> has been accepted to EMNLP 2021 (<b>main conference, long paper</b>).</span></li>
+              <li><span>[02/2022] Our paper <a href="https://aclanthology.org/2022.acl-long.46/" target="_blank">"Controllable Dictionary Example Generation: Generating Example Sentences for Specific Targeted Audiences"</a> has been accepted to ACL 2022 (<b>Main Conference, Long Paper</b>).</span></li>
+	     <li><span>[08/2021] Our paper <a href="https://aclanthology.org/2021.emnlp-main.681/" target="_blank">"Parallel Refinements for Lexically Constrained Text Generation with BART"</a> has been accepted to EMNLP 2021 (<b>Main Conference, Long Paper</b>).</span></li>
 	     <li><span>[12/2020] Our paper <a href="https://ojs.aaai.org/index.php/AAAI/article/view/17536" target="_blank">"Show Me How To Revise: Improving Lexically Constrained Sentence Generation with XLNet"</a> has been accepted to AAAI 2021.</span></li>
 
             </ul>
