--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
               News
             </h3>
             <ul>
-	     <li><span>[10/2023] Our paper <a href="https://arxiv.org/abs/2210.117080000" target="_blank">"CAPSTONE: Curriculum Sampling for Dense Retrieval with Document Expansion"</a> has been accepted to EMNLP 2023 (<b>Long Paper</b>).</span></li>
-	     <li><span>[10/2023] Our paper <a href="https://arxiv.org/abs/2210.117080000" target="_blank">"PivotFEC: Enhancing Few-shot Factual Error Correction with a Pivot Task Approach using Large Language Models"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
-	     <li><span>[10/2023] Our paper <a href="https://arxiv.org/abs/2210.117080000" target="_blank">"Noisy Pair Corrector for Dense Retrieval"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
+	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.emnlp-main.651/" target="_blank">"CAPSTONE: Curriculum Sampling for Dense Retrieval with Document Expansion"</a> has been accepted to EMNLP 2023 (<b>Long Paper</b>).</span></li>
+	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.findings-emnlp.667/" target="_blank">"PivotFEC: Enhancing Few-shot Factual Error Correction with a Pivot Task Approach using Large Language Models"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
+	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.findings-emnlp.765/" target="_blank">"Noisy Pair Corrector for Dense Retrieval"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
 	     
 	     <li><span>[10/2022] Our paper <a href="https://arxiv.org/abs/2210.11708" target="_blank">"Metric-guided Distillation: Distilling Knowledge from the Metric to Ranker and Retriever for Generative Commonsense Reasoning"</a> has been accepted to EMNLP 2022 (<b>Long Paper</b>).</span></li>
 	     <em class="red"><b>Oral Presentation </b></em><br>
