--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
               News
             </h3>
             <ul>
-	     <li><span>[12/2023] Our paper <a href="https://arxiv.org/abs/" target="_blank">"Improving Factual Error Correction by Learning to Inject Factual Errors"</a> has been accepted to AAAI 2024 (<b>Long Paper</b>).</span></li>
+		    
+	     <li><span>[3/2024] Our paper <a href="https://arxiv.org/abs/2303.16854" target="_blank">"AnnoLLM: Making Large Language Models to Be Better Crowdsourced Annotators"</a> has been accepted to NAACL 2024.</span></li>
+	     <li><span>[2/2024] Our paper <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29778/" target="_blank">"Knowledge Enhanced Pre-training for Cross-lingual Dense Retrieval"</a> has been accepted to COLING 2024.</span></li>
+	     <li><span>[12/2023] Our paper <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29778/" target="_blank">"Improving Factual Error Correction by Learning to Inject Factual Errors"</a> has been accepted to AAAI 2024.</span></li>
 	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.emnlp-main.651/" target="_blank">"CAPSTONE: Curriculum Sampling for Dense Retrieval with Document Expansion"</a> has been accepted to EMNLP 2023 (<b>Long Paper</b>).</span></li>
 	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.findings-emnlp.667/" target="_blank">"PivotFEC: Enhancing Few-shot Factual Error Correction with a Pivot Task Approach using Large Language Models"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
 	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.findings-emnlp.765/" target="_blank">"Noisy Pair Corrector for Dense Retrieval"</a> has been accepted to the Findings of EMNLP 2023 (<b>Long Paper</b>).</span></li>
