--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h3 id="intro">About Me</h3>
             <p>I am currently a postdoctoral researcher in the <a href="https://www.cs.hku.hk/" target="_blank"> Department of Computer Science</a>
               at <a href="https://www.hku.hk//" target="_blank">the University of Hong Kong (HKU)</a>, working with <a href="https://www.cs.hku.hk/people/academic-staff/smyiu" target="_blank">Prof. Yiu, Siu Ming</a>. 
-		    Prior to this, I obtained my Ph.D. in Computer Science at HKU, under the supervision of Prof. Yiu Siu Ming.
+		    Prior to this, I obtained my Ph.D. in Computer Science at HKU, under the supervision of Prof. Yiu, Siu Ming.
 <!--               Before HKU, I obtained my Ph.D. degree in <a href="https://ece.hkust.edu.hk/" target="_blank">ECE department</a> from <a href="http://www.ust.hk/" target="_blank">Hong Kong University of Science and Technology</a>, advised by Prof. <a href="https://sites.google.com/view/dyyeung" target="_blank">Dit-Yan Yeung</a>.
               I was a visiting research scholar in <a href="https://www.ri.cmu.edu/" target="_blank">The Robotics Institute</a> of <a href="http://www.cmu.edu/" target="_blank">Carnegie Mellon University</a>, working with Prof. <a href="http://www.cs.cmu.edu/~abhinavg/" target="_blank">Abhinav Gupta</a>.
  -->
