--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
               News
             </h3>
             <ul>
-		    
-	     <li><span>[03/2024] Our paper <a href="https://arxiv.org/abs/2303.16854" target="_blank">"AnnoLLM: Making Large Language Models to Be Better Crowdsourced Annotators"</a> has been accepted to NAACL 2024.</span></li>
+	     <li><span>[10/2024] Our paper <a href="https://arxiv.org/abs/2410.04107" target="_blank">"TUBench: Benchmarking Large Vision-Language Models on Trustworthiness with Unanswerable Questions"</a> has appeared on arXiv.</span></li>   
+	     <li><span>[03/2024] Our paper <a href="https://aclanthology.org/2024.naacl-industry.15/" target="_blank">"AnnoLLM: Making Large Language Models to Be Better Crowdsourced Annotators"</a> has been accepted to NAACL 2024.</span></li>
 	     <li><span>[02/2024] Our paper <a href="https://aclanthology.org/2024.lrec-main.857/" target="_blank">"Knowledge Enhanced Pre-training for Cross-lingual Dense Retrieval"</a> has been accepted to COLING 2024.</span></li>
 	     <li><span>[12/2023] Our paper <a href="https://ojs.aaai.org/index.php/AAAI/article/view/29778/" target="_blank">"Improving Factual Error Correction by Learning to Inject Factual Errors"</a> has been accepted to AAAI 2024.</span></li>
 	     <li><span>[10/2023] Our paper <a href="https://aclanthology.org/2023.emnlp-main.651/" target="_blank">"CAPSTONE: Curriculum Sampling for Dense Retrieval with Document Expansion"</a> has been accepted to EMNLP 2023 (<b>Long Paper</b>).</span></li>
