--- a/index.html
+++ b/index.html
@@ -444,13 +444,14 @@
 
               <li><b>Conference Reviewer:</b></li>
 
-              AAAI Conference on Artificial Intelligence (AAAI), 2021. <br>
+              AAAI Conference on Artificial Intelligence (AAAI), 2021, 2024. <br>
 	      North American Chapter of the Association for Computational Linguistics (NAACL), 2022. <br>
-	      Empirical Methods in Natural Language Processing  (EMNLP), 2022. <br>
-		    
-
+	      Empirical Methods in Natural Language Processing  (EMNLP), 2022, 2023. <br>
+	      International Conference on Learning Representations (ICLR), 2025.<br>
+		
 
               <li><b>Journal Reviewer</b></li>
+	      IEEE Transactions on Evolutionary Computation, 2024. <br>
               IEEE Transactions on Emerging Topics in Computational Intelligence, 2022. <br>
               Applied Intelligence, 2021. <br>
 
